--- a/Styles/cadastro.css
+++ b/Styles/cadastro.css
@@ -3,15 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    height: 100vh;
-    width: 100%;
+.container{
     display: flex;
+    min-height: 100vh;
+    width: 100%;
     flex-direction: column;
-    justify-content: space-between;
     background: linear-gradient(to right ,rgb(5, 5, 5), rgb(9, 9, 9));
     background-attachment: fixed;
     color: white;
+}
+.container main{
+    flex: 1 1 0;
 }
 .header{
     display: flex;
@@ -34,7 +36,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: -5rem;
+    margin-top: 4rem;
 }
 .cadastro fieldset{
     display: flex;
