--- a/Styles/index.css
+++ b/Styles/index.css
@@ -3,16 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+.container{
     height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     background: linear-gradient(to right ,rgb(5, 5, 5), rgb(9, 9, 9));
     background-attachment: fixed;
     color: white;
     box-sizing: border-box;
+}
+.container main{
+    flex: 1 1 0;
 }
 .header{
     display: flex;
@@ -39,11 +41,11 @@ main{
     display: flex;
     flex-direction: column;
     justify-items: center;
-    justify-content: space-between;
     padding: 20px;
     width: 25rem;
     height: 25rem;
     border-radius: 20px;
+    margin-top: 4.5rem;
     background: black;
     text-align: center;
     box-shadow: #320505 -0px -0px 1px 1px;
