--- a/Styles/login.css
+++ b/Styles/login.css
@@ -3,15 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    height: 100vh;
+.container{
+    min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     background: linear-gradient(to right ,rgb(5, 5, 5), rgb(9, 9, 9));
     background-attachment: fixed;
     color: white;
+}
+.container main{
+    flex: 1 1 0;
 }
 .header{
     display: flex;
@@ -35,7 +37,7 @@ body{
     justify-content: center;
 }
 #caixa-login{
-    margin-top: -5rem;
+    margin-top: 4.5rem;
 }
 .login fieldset{
     display: flex;
